# ts-3d-model-viewer

./: .eslintrc.js  .gitignore  .huskyrc.js  .lintstagedrc.js  .postcssrc.js  .prettierignore  README.md  jsconfig.json  package.json  tsconfig.json  tslint.json
cad-studio/plasticity/: package.json
cli-tools/: .gitattributes  README.md
cli-tools/blender-scripts/: README.md  blender_compress_mesh.py
cli-tools/docker-aio/: README.md
cli-tools/go-admesh/: Makefile  config.status  libadmesh.la  libadmesh.pc  libtool
cli-tools/google-model-viewer/: PLYLoader.js  STLLoader.js  index.html  model-viewer.js  script.js
files/stls/: Octocat-v1.stl
formats/3DS/: links.txt  name.txt  readme.md
formats/3MF/: extensions.txt  links.txt  name.txt  readme.md
formats/AC/: links.txt  name.txt  readme.md
formats/AMF/: extensions.txt  links.txt  name.txt  readme.md
formats/ASE/: extensions.txt  links.txt  name.txt  readme.md
formats/B3D/: extensions.txt  links.txt  name.txt  readme.md
formats/BLEND/: extensions.txt  name.txt  readme.md
formats/BVH/: extensions.txt  links.txt  name.txt  readme.md
formats/C4D/: extensions.txt  links.txt  readme.md
formats/COB/: extensions.txt  links.txt  name.txt  readme.md
formats/CSM/: extensions.txt  links.txt  name.txt  readme.md
formats/Collada/: extensions.txt  links.txt  name.txt  readme.md
formats/DXF/: extensions.txt  links.txt  name.txt  readme.md
formats/FBX/: links.txt  name.txt  readme.md
formats/HMP/: extensions.txt  name.txt  readme.md
formats/IFC/: extensions.txt  links.txt  name.txt  readme.md
formats/IRR/: extensions.txt  links.txt  name.txt  readme.md
formats/JT/: extensions.txt  links.txt  name.txt  readme.md
formats/LWO/: extensions.txt  name.txt
formats/LWS/: extensions.txt  links.txt  name.txt  readme.md
formats/LXO/: extensions.txt  links.txt  name.txt  readme.md
formats/M3D/: extensions.txt  links.txt  name.txt  readme.md
formats/MD2/: extensions.txt  links.txt  name.txt  readme.md
formats/MD3/: extensions.txt  name.txt  readme.md
formats/MD4/: extensions.txt  links.txt  name.txt  readme.md
formats/MD5/: extensions.txt  links.txt  name.txt  readme.md
formats/MDL/: extensions.txt  links.txt  name.txt
formats/MS3D/: extensions.txt  links.txt  name.txt  readme.md
formats/NFF/: extensions.txt  links.txt  name.txt  readme.md
formats/OFF/: readme.md
formats/OnShape/: extensions.txt  links.txt  name.txt  readme.md
formats/OpenGEX/: extensions.txt  links.txt  name.txt  readme.md
formats/PLY/: links.txt  name.txt  readme.md
formats/Q3D/: extensions.txt  links.txt  name.txt  readme.md
formats/RAW/: name.txt  readme.md
formats/SIB/: extensions.txt  links.txt  name.txt  readme.md
formats/SMD/: extensions.txt  links.txt  name.txt  readme.md
formats/STEP/: extensions.txt  links.txt  name.txt  readme.md
formats/STL/: extensions.txt  links.txt  name.txt  readme.md
formats/TER/: links.txt  name.txt  readme.md
formats/X/: links.txt  readme.md
formats/X3D/: extensions.txt  links.txt  name.txt  readme.md
formats/XGL/: extensions.txt  links.txt  name.txt  readme.md
formats/X_T/: 10.5寸烤盘环 12.9.x_t  13寸烤盘环.x_t
formats/glTF/: extensions.txt  name.txt
formats/glb/: extensions.txt  links.txt  name.txt  readme.md
model-viewer/: .eslintrc.js  .npmignore  jsconfig.json  package.json  pnpm-lock.yaml  tslint.json
o3dv/: README.md  package.json  pnpm-lock.yaml
scripts/jest/: jest.config.js
scripts/tools/: lint_all.sh  start_micro.sh
scripts/webpack/: webpack.config.js
thumbnail-generator/threejs-thumbnail/: package-lock.json
tools/cli-reader/: 121asc.cli  20X20asc.cli  plot_point.m  read_ASCII_CLI.m  read_file.m
tools/go-admesh/: .gitignore  AUTHORS  ChangeLog  Makefile.in  admesh  config.h  config.h.in  configure  ltmain.sh
tools/google-model-viewer/: style.css  (+2 more)
wasm-worker/assimpjs/: CMakeLists.txt  README.md  package.json
wasm-worker/assimpjs/.github/workflows/: native_build.yml  wasm_build.yml
wasm-worker/assimpjs/assimpjs/example/: main.cpp
wasm-worker/assimpjs/assimpjs/src/: assimpjs.cpp  assimpjs.hpp  fileio.cpp  fileio.hpp  filelist.cpp  filelist.hpp  result.cpp  result.hpp
wasm-worker/assimpjs/docs/: index.html
wasm-worker/assimpjs/docs/source/: demo.css  demo.js
wasm-worker/assimpjs/examples/: browser_download_test.html  browser_dragdrop_test.html  node_local_delay_load_test.js  node_local_load_test.js
wasm-worker/assimpjs/test/: test.js
wasm-worker/assimpjs/tools/: build_wasm_win_dist.bat  setup_emscripten_win.bat
wasm-worker/occt-import-js/: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.json
wasm-worker/occt-import-js/.github/workflows/: native_build.yml  npm_publish.yml  wasm_build.yml
wasm-worker/occt-import-js/examples/: browser_step.html  browser_step_worker.html  node_step.js  stp_to_obj.js  three_viewer.html
wasm-worker/occt-import-js/occt-import-js/example/: main.cpp
wasm-worker/occt-import-js/occt-import-js/src/: importer.cpp  importer.hpp  occt-import-js.cpp  occt-import-js.hpp
wasm-worker/occt-import-js/test/: test.js
wasm-worker/occt-import-js/test/testfiles/cax-if/: as1-tu-203.stp  dm1-oc-214.stp  dm1-pe-214.stp  io1-tu-203.stp  source.txt
wasm-worker/occt-import-js/test/testfiles/cax-if/s1-tu-203/: footback.stp  footfront.stp  headback.stp  headfront.stp  mainbodyback.stp  mainbodyfront.stp  s1-tu-203.stp  tailmiddlepart.stp  tailturbine.stp
wasm-worker/occt-import-js/test/testfiles/cax-if/s1_pe_214/: foot_asm.stp  foot_back_prt.stp  foot_front_prt.stp  head_asm.stp  head_back_prt.stp  head_front_prt.stp  main_body_back_prt.stp  main_body_front_prt.stp  mainbody_asm.stp  s1_pe_214.stp  tail_asm.stp  tail_middle_part_prt.stp  tail_turbine_prt.stp
wasm-worker/occt-import-js/test/testfiles/simple-basic-cube/: cube.stp  source.txt
wasm-worker/occt-import-js/tools/: build_wasm_win.bat  build_wasm_win_dist.bat  build_wasm_win_release.bat  setup_emscripten_win.bat
webgl-viewer/: .lintstagedrc.js  .postcssrc.js  .prettierrc.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
(+158 files in other folders)
